kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: accommodations
spec:
  selector:
    app: backend
  ports:
  - port: 9090
    targetPort: 9090
  type: ClusterIP
